# spatiotemporal-gnn-wildfire-risk

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements.txt  setup_env.sh
configs/: gnn_config.yaml  gnn_config_origin.yaml
notebooks/: 00_baseline_models.ipynb  00_environment_validation.ipynb  01_dataset_exploration.ipynb  02_graph_construction.ipynb  03_baseline_models.ipynb  04_baseline_models.ipynb  04_cnn_baseline.ipynb  05a_gnn_architecture.ipynb  05b_calibration.ipynb
reports/predictions/: phase4_test_predictions.npz  phase4b_cnn_test_predictions.npz  phase5a_gcn_preds.npz  phase5a_graphsage_preds.npz
reports/predictions/archive/: phase4_test_predictions.npz  phase5a_gat_preds.npz  phase5a_gat_test_predictions.npz  phase5a_gcn_test_predictions.npz  phase5a_graphsage_test_predictions.npz
scripts/: download_dem.py  fix_split_rebuild_graph.py  paper_figures.py  phase2_align_raster.py  phase3_build_graph.py  phase3_make_figures.py  phase4_make_figures.py  phase4_run_baselines.py  phase4b_make_cnn_figures.py  phase4b_run_cnn.py  phase5a_evaluate_all_arches.py  phase5a_make_figures.py  phase5a_rebuild_improved_graph.py  phase5a_run_gnn.py  phase5a_save_predictions.py  phase5a_train_gnn.py  phase5b_calibrate.py  phase5d_intervention.py  phase5d_intervention_v2.py  phase5d_make_figures.py  phase5d_make_figures_v2.py
src/wildfire_gnn/: __init__.py  config.py  reproducibility.py
tests/: test_phase0_structure.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase4b_cnn.py  test_phase5a.py  test_phase5b.py  test_phase5d.py
(+18 files in other folders)
