[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wildfire-gnn"
version = "0.1.0"
description = "Uncertainty-calibrated, intervention-aware spatiotemporal GNN for wildfire burn probability prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dilrabo Khidirova" }]

[tool.setuptools.packages.find]
where = ["src"]

# ── Black ──────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310"]

# ── Ruff ──────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

# ── mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

# ── pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/wildfire_gnn --cov-report=term-missing -v"